<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout_locations"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/locations_list"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/devices_activity_vertical_margin"
            android:paddingLeft="@dimen/devices_activity_horizontal_margin"
            android:paddingRight="@dimen/devices_activity_horizontal_margin"
            android:paddingTop="@dimen/devices_activity_vertical_margin"/>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>