<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/notifications_subtitle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/notifications_subtitle"
            android:text="@string/notifications_subtitle"
            style="@android:style/TextAppearance.Material.Caption"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorLightGray"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_keylines"/>

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout_notifications"
        android:layout_width="match_parent"
        android:layout_below="@id/notifications_subtitle_layout"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/notifications_list"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/devices_activity_vertical_margin"
            android:paddingLeft="@dimen/devices_activity_vertical_margin"
            android:paddingRight="@dimen/devices_activity_vertical_margin"
            android:paddingTop="@dimen/devices_activity_vertical_margin"/>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>